--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-snaplist-carousel": "^4.4.2",
+    "react-use": "^17.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
